--- a/web/index.html
+++ b/web/index.html
@@ -73,53 +73,67 @@
 
       <div class="row">
         <div class="col-md-3">
-          <img src="img/desarrollo.jpg" width="200px">
+          <figure class="figure">
+            <img src="img/desarrollo.jpg" width="400px" class="figure-img img-fluid rounded" alt="...">
+            <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+          </figure>
         </div>
         <div class="col-md-3">
-          <img src="img/desarrollo.jpg" width="200px">
+          <figure class="figure">
+            <img src="img/desarrollo.jpg" width="400px" class="figure-img img-fluid rounded" alt="...">
+            <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+          </figure>
         </div>
         <div class="col-md-3">
-          <img src="img/desarrollo.jpg" width="200px">
+          <figure class="figure">
+            <img src="img/desarrollo.jpg" width="400px" class="figure-img img-fluid rounded" alt="...">
+            <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+          </figure>
         </div>
         <div class="col-md-3">
-          <img src="img/desarrollo.jpg" width="200px">
+          <figure class="figure">
+            <img src="img/desarrollo.jpg" width="400px" class="figure-img img-fluid rounded" alt="...">
+            <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+          </figure>
         </div>
       </div>
-      
       <div class="row">
-        <div class="col-md-3">
-          <img src="img/desarrollo.jpg" width="200px">
+          <div class="col-md-3">
+            <figure class="figure"><a href="desarrollo.html">
+              <img src="img/desarrollo.jpg" width="400px" class="figure-img img-fluid rounded" alt="...">
+              </a>
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+            </figure>
+          </div>
+          <div class="col-md-3">
+            <figure class="figure">
+              <img src="img/desarrollo.jpg" width="400px" class="figure-img img-fluid rounded" alt="...">
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+            </figure>
+          </div>
+          <div class="col-md-3">
+            <figure class="figure">
+              <img src="img/desarrollo.jpg" width="400px" class="figure-img img-fluid rounded" alt="...">
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+            </figure>
+          </div>
+          <div class="col-md-3">
+            <figure class="figure">
+              <img src="img/desarrollo.jpg" width="400px" class="figure-img img-fluid rounded" alt="...">
+              <!--<figcaption class="figure-caption">A caption for the above image.</figcaption>-->
+            </figure>
+          </div>
         </div>
-        <div class="col-md-3">
-          <img src="img/desarrollo.jpg" width="200px">
-        </div>
-        <div class="col-md-3">
-          <img src="img/desarrollo.jpg" width="200px">
-        </div>
-        <div class="col-md-3">
-          <img src="img/desarrollo.jpg" width="200px">
-        </div>
-      </div>
   </main>
 
-  <!--   <footer class="text-muted">
+<footer class="text-muted">
       <div class="container">
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
-        <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="https://getbootstrap.com/">Visit the homepage</a> or read our <a
-            href="/docs/4.3/getting-started/introduction/">getting started guide</a>.</p>
+        <p><a href="https://getbootstrap.com/">2019 © The Monarchs Group</a></p>
       </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="/docs/4.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o"
-      crossorigin="anonymous"></script>
- -->
-</body>
+  </body>
 
 </html>
