--- a/web/preinscripcion.html
+++ b/web/preinscripcion.html
@@ -22,7 +22,6 @@
 		<br>
 		<label>Email: <br>
 			<input type="email" required placeholder="nombre@mail.com" style="width: 300px;">
-			<input type="text" required>
 		</label>
 		<br>
 		<label> Carrera que te interesa (opcional) <br>
@@ -55,7 +54,7 @@
 		</label>
 		<br>
 		<br>
-		<button href="index.html" type="button" class="btn btn-success">Volver a Inicio</button>
+		<a href="index.html" class="btn btn-success">Volver a Inicio</a>
 		<button type="submit" class="btn btn-success">Enviar</button>
 	</form>
 </body>
