--- a/web/gestionymant.html
+++ b/web/gestionymant.html
@@ -91,19 +91,19 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/mantgestind1.jpg"
+                            <img src="Recursos/mantgestind1.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/mantgestind2.jpg"
+                            <img src="Recursos/mantgestind2.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/mantgestind3.jpg"
+                            <img src="Recursos/mantgestind3.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/mantgestind4.jpg"
+                            <img src="Recursos/mantgestind4.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         
