--- a/web/redes.html
+++ b/web/redes.html
@@ -91,19 +91,19 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/redes1.jpg"
+                            <img src="Recursos/redes1.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/redes2.jpg"
+                            <img src="Recursos/redes2.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/redes3.png"
+                            <img src="Recursos/redes3.png"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/redes4.jpg"
+                            <img src="Recursos/redes4.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
 
