--- a/web/software.html
+++ b/web/software.html
@@ -88,23 +88,23 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/soft_future.jpg"
+                            <img src="Recursos/soft_future.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/soft3.jpg"
+                            <img src="Recursos/soft3.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/Juego_Software.jpg"
+                            <img src="Recursos/Juego_Software.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/img_soft.jpg"
+                            <img src="Recursos/img_soft.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/the-complete-c-master-class-course.jpeg"
+                            <img src="Recursos/the-complete-c-master-class-course.jpeg"
                                 class="d-block w-100" alt="...">
                         </div>
                     </div>
