--- a/web/administracion.html
+++ b/web/administracion.html
@@ -94,19 +94,19 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/admgest1.jpg"
+                            <img src="Recursos/admgest1.jpg"
                                 class=" d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/admgest2.png"
+                            <img src="Recursos/admgest2.png"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/admgest3.jpg"
+                            <img src="Recursos/admgest3.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/admgest4.jpg"
+                            <img src="Recursos/admgest4.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
 
