--- a/web/gestionambiental.html
+++ b/web/gestionambiental.html
@@ -87,23 +87,23 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/gestionamb4.jpg"
+                            <img src="Recursos/gestionamb4.jpg"
                                 class=" d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/gestionamb5.jpg"
+                            <img src="Recursos/gestionamb5.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/gestionamb1.jpg"
+                            <img src="Recursos/gestionamb1.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/gestionamb3.png"
+                            <img src="Recursos/gestionamb3.png"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/gestionamb2.png"
+                            <img src="Recursos/gestionamb2.png"
                                 class="d-block w-100" alt="...">
                         </div>
                     </div>
