--- a/web/protesis.html
+++ b/web/protesis.html
@@ -86,23 +86,23 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/protesis1.jpg"
+                            <img src="Recursos/protesis1.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/protesis2.jpg"
+                            <img src="Recursos/protesis2.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/protesis3completa.jpeg"
+                            <img src="Recursos/protesis3completa.jpeg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/protesis4.jpg"
+                            <img src="Recursos/protesis4.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/protesis5.jpg"
+                            <img src="Recursos/protesis5.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                     </div>
