--- a/web/quimica.html
+++ b/web/quimica.html
@@ -91,19 +91,19 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/Quimica1.jpg"
+                            <img src="Recursos/Quimica1.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/quimica2.jpg"
+                            <img src="Recursos/quimica2.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/quimica3.jpg"
+                            <img src="Recursos/quimica3.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/quimica4.jpg"
+                            <img src="Recursos/quimica4.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                        
