--- a/web/seguridad.html
+++ b/web/seguridad.html
@@ -93,23 +93,23 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/seguridad1.jpeg"
+                            <img src="Recursos/seguridad1.jpeg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/seguridad2.jpeg"
+                            <img src="Recursos/seguridad2.jpeg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/seguridad3.jpg"
+                            <img src="Recursos/seguridad3.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/seguridad4.jpg"
+                            <img src="Recursos/seguridad4.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="C:\Users\asd\Documents\Visual Code\Websites\Recursos/seguridad5.jpg"
+                            <img src="Recursos/seguridad5.jpg"
                                 class="d-block w-100" alt="...">
                         </div>
                     </div>
